Re-added red X to Cancel button and bolded font. Fixed button horizontal alignment.

--- a/src/main/resources/static/css/css.css
+++ b/src/main/resources/static/css/css.css
@@ -214,7 +214,6 @@ th {
 }
 
 .admin-listen .updateSection {
-    width: 200px;
     height: 115px;
     margin-top: 6px;
     border-radius: 5px;
@@ -224,6 +223,7 @@ th {
     width: 200px;
     border-radius: 5px;
     height: 32px;
+    font-weight: bold;
 }
 
 .admin-listen  .uploadedSongPlayer {
